# 24hpoc-llm-eval-iterative-enhancement

./: .env.example  .gitignore  .ruff.toml  ARCHITECTURE.md  DEVELOPMENT.md  FINAL_VALIDATION.md  ITERATION_REPORT.md  LICENSE  Makefile  PROVIDER_TEST_RESULTS.md  README.md  iteration_log.txt  pyproject.toml  run_iterations.py  streamlit_app.py  test_cli.sh
.github/workflows/: test.yml
.streamlit/: config.toml
app/: __init__.py  audit.py  cli.py  config.py  cost.py
app/generate/: __init__.py  runner.py
app/judge/: __init__.py  rubric.py  runner.py
app/provider/: __init__.py  anthropic.py  base.py  google.py  mock.py  openai.py
app/report/: __init__.py  aggregate.py  charts.py
app/summarize/: __init__.py  runner.py  schema.py
app/tune/: __init__.py  apply.py  heuristics.py  llm_assistant.py
app/ui/: __init__.py  styles.py
archive/: 5_ITERATION_EXPERIMENT_RESULTS.md  ARCHITECTURE.md  DEEP_ANALYSIS.md  DEVELOPMENT.md  GITHUB_SETUP.md  GPT41_COMPLETE_PIPELINE_RESULTS.md  GPT5_BREAKTHROUGH_RESULTS.md  ITERATION_RESULTS.md  PROVIDER_IMPLEMENTATION.md  PROVIDER_TEST_RESULTS.md
configs/: models.yaml  rubric.business.json  rubric.realistic.json  rubric.strict.json
configs/prompts/: judge.system.txt  judge.user.txt  summarizer.system.txt  summarizer.user.txt
demo/: README.md
tests/: test_end_to_end.py  test_provider_contract.py  test_rubric.py
